--- a/1911060551_NguyenThienTam_BigSchool/1911060551_NguyenThienTam_BigSchool.csproj
+++ b/1911060551_NguyenThienTam_BigSchool/1911060551_NguyenThienTam_BigSchool.csproj
@@ -185,6 +185,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\CoursesController.cs" />
     <Compile Include="Controllers\AttendancesController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\FollowingsController.cs" />
@@ -218,6 +219,10 @@
     <Compile Include="Migrations\202203271243029_AddFollowingsTable.cs" />
     <Compile Include="Migrations\202203271243029_AddFollowingsTable.designer.cs">
       <DependentUpon>202203271243029_AddFollowingsTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202203280750319_AddIsCanceledColumnToCourse.cs" />
+    <Compile Include="Migrations\202203280750319_AddIsCanceledColumnToCourse.designer.cs">
+      <DependentUpon>202203280750319_AddIsCanceledColumnToCourse.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -329,6 +334,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202203271243029_AddFollowingsTable.resx">
       <DependentUpon>202203271243029_AddFollowingsTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202203280750319_AddIsCanceledColumnToCourse.resx">
+      <DependentUpon>202203280750319_AddIsCanceledColumnToCourse.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
